# octs

./: .gitignore  CMakeLists.txt  DataBase.c  DataBase.h  README.md  cmake  helpers.c  helpers.h  main.c  main_test.c  test_send.c
client/: client.c  main.c
client/client/: client.c  client.h  send_file.c  send_message.c  ui.c  ui.h
client/controllers/: client_methods.c  client_methods.h  register_user.c  submit_solution.c
config/: DB_CONFIG.h
lib/: DataBase.c  DataBase.h  _string.c  _string.h  dictionary.c  dictionary.h  global_variables.h  helpers.c  helpers.h  lib.h
network/: main.c
network/client/: client.c  client.h
network/client_side/: CMakeLists.txt  main.c
network/client_side/client/: client.c  client.h
network/server/: server.c  server.h
network/server_side/: CMakeLists.txt  main.c
network/server_side/cJSON/: cJSON.c
network/server_side/server/: server.c  server.h
server/: file_main.c  main.c  maind.c  message_main.c  pgsqlFind.cmake  register_for_contest.c
server/controllers/: add_problem_to_contest.c  check_result.c  compiler.c  compiler.h  controllers.h  create_contest.c  create_test_case.c  get_contest.c  get_contests.c  get_contests_problems.c  get_problem.c  get_problems.c  login.c  methods.h  problem_creation.c  problem_details.c  register_for_contest.c  save_file.c  server_methods.h  signup.c  submit_problem.c  supmit_problem.c  users_contests.c
server/db/migration/: migrations.c  migrations.h
server/db/mock/: mock_data.c  mock_data.h
server/migration/: migrations.c
server/models/: category.c  category.h  contest.c  contest.h  contest_problem.c  contest_problem.h  file.c  file.h  model.h  problem.c  problem.h  problem_result.c  problem_result.h  test_case.c  test_case.h  user.c  user.h  user_contest_result.c  user_contest_result.h
server/server/: file_server.c  main.c  message_server.c  server.c  server.h
